# back-for-hyun-shop

./: .env  .gitignore  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_created_at.py
accounts/templates/accounts/: my_template.html
mall_test/: urls.py  views.py
mall_test/templates/mall_test/: payment_form.html
mysite/: settings.py  urls.py
templates/: base.html  root.html
